--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <footer>
         <div>UAEMex</div>
-        <img src="C:\Users\Huawe\OneDrive\Escritorio\extinguidores\logo\logouaemex.jpg" alt="Logo">
+        <img src="logo/logouaemex.jpg" alt="Logo">
     </footer>
 </body>
 </html>
